--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "film-club",
   "private": true,
+  "homepage": "https://jekrch.github.io/film-club",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "bun run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
@@ -25,6 +28,7 @@
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.4",
