--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preview": "bun vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/postcss": "^4.1.4",
     "@tailwindcss/vite": "^4.1.4",
     "react": "^19.0.0",
