--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "film-club",
   "private": true,
-  "homepage": "https://jekrch.github.io/film-club",
+  "homepage": "https://www.criterionclub.org",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -21,10 +21,15 @@
     "classnames": "^2.5.1",
     "framer-motion": "^12.7.4",
     "hamburger-react": "^2.5.2",
+    "highcharts": "^12.2.0",
+    "highcharts-react-official": "^3.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
-    "react-router-dom": "^7.5.1"
+    "react-router-dom": "^7.5.1",
+    "scrollbar": "^0.1.12",
+    "swiper": "^11.2.6",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
