--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "predeploy": "bun run build",
     "deploy": "gh-pages -d dist",
-    "dev": "bun vite",
+    "dev": "bun vite --port 5173",
     "build": "tsc -b && bun vite build",
     "lint": "bun eslint .",
     "preview": "bun vite preview"
