--- a/.github/workflows/sync-google-sheet.yml
+++ b/.github/workflows/sync-google-sheet.yml
@@ -35,7 +35,9 @@ jobs:
 
       - name: Commit and push if changes
         run: |
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
-          git add src/assets/films.json
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Auto-update films.json from Google Sheet" && git push)
+            git config --local user.email "github-actions[bot]@users.noreply.github.com"
+            git config --local user.name "github-actions[bot]"
+            git add src/assets/films.json
+            git diff --quiet && git diff --staged --quiet || (git commit -m "Auto-update films.json from Google Sheet" && git push origin main)
+        env:
+            GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
