--- a/.github/workflows/sync-google-sheet.yml
+++ b/.github/workflows/sync-google-sheet.yml
@@ -36,6 +36,7 @@ jobs:
           SHEET_ID: "1wGrX2xWrJlS6WFpNxzD73VrHW4ZnrfedjtK5C9EYeuw"
           JSON_PATH: "src/assets/films.json"
           OMDB_API_KEY: ${{ secrets.OMDB_API_KEY }}
+          TMDB_KEY: ${{ secrets.TMDB_KEY }}
 
       - name: Check for changes
         id: check_changes # This step produces an output
