--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "bun vite --port 5173",
     "build": "tsc -b && bun vite build",
     "lint": "bun eslint .",
-    "preview": "bun vite preview"
+    "preview": "bun vite preview",
+    "test": "bun jest"
   },
   "dependencies": {
     "@fontsource/inter": "^5.2.5",
@@ -18,6 +19,7 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/postcss": "^4.1.4",
     "@tailwindcss/vite": "^4.1.4",
+    "@types/jest": "^29.5.14",
     "classnames": "^2.5.1",
     "framer-motion": "^12.7.4",
     "hamburger-react": "^2.5.2",
@@ -33,6 +35,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
@@ -42,8 +46,11 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.4",
+    "ts-jest": "^29.3.4",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
     "vite": "^6.3.1",
